infrastructure/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: westos
  labels:
    name: westos
    environment: dev
